Fix alignment

--- a/apps/style_guide/index.styl
+++ b/apps/style_guide/index.styl
@@ -58,8 +58,10 @@
 .sg-component-rendered
   padding 20px
   text-align center
-  *:not('.grid-n-items')
+  *
     text-align left
+  .grid-n-up
+    text-align center
 
 .sg-display
   margin 0 10px
